# JerryBackend

./: pyproject.toml
app/auth/: documents.json  service.py  service_gpt.py
app/auth/repository/: transcription_repository.py
app/auth/router/: router_transcribe_audio.py
